Palladium-JazzHR/src/objects/Questionnaire__c.object
<CustomObject>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Applicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicant</label>
        <referenceTo>Applicant__c</referenceTo>
        <relationshipLabel>Questionnaires</relationshipLabel>
        <relationshipName>Questionnaire</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Questionnaire</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Applicant__c</columns>
        <columns>Question__c</columns>
        <columns>Answer__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Q-{000000}</displayFormat>
        <label>Questionnaire ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questionnaire</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>